Move fields validation to FunctionExpression interface and derived class OpenSearchFunctions.
Signed-off-by: forestmvey <forestv@bitquilltech.com>